--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "dotenv": "^8.2.0",
+    "log4js": "^6.3.0",
     "mongoose": "^5.11.15",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
