--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "mongoose": "^5.11.15",
     "pbkdf2": "^3.1.1",
@@ -33,6 +34,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.9.1",
     "@types/pbkdf2": "^3.1.0",
     "@types/supertest": "^2.0.8",
